<resources>
    <string name="app_name">iTube</string>
    <string name="comment_one">🙇‍♂️Vaishakh: Wow.. Nice Video</string>
    <string name="comment_two">🧔 Deepak: What is this shit??🙄</string>
    <string name="comment_three">👨‍💻 Kapil: I\'ve nothing to say..!🤐</string>
    <string name="comment_four">👨‍⚕️ Dr. Raj: I\'m feeling sleepy.🥱😴</string>
    <string name="comment_five">💂‍♂️ Rambabu: You stole video from movie.</string>
    <string name="comment_six">👮‍♀️ Mr. Police: Save animal and watch animation.😉</string>
    <string name="comment_seven">👑 King: I want that animal to pet.</string>
    <string name="comment_eight">👦 Kid_420: Wow, can i get link to this cartoon movie.?</string>
    <string name="comment_nine">👧 Sophia : My Princess will come from same place in horse.</string>
    <string name="comment_ten">😎 Badboy123: I don\'t like cartoons, it is for kids.</string>

</resources>