<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <VideoView
        android:id="@+id/stream"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:background="#9A9797"
        android:text="Comments : "
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stream" />

    <TextView
        android:id="@+id/comments_count"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:background="#A5A0A0"
        android:paddingTop="5dp"
        android:text="132"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/comments"
        app:layout_constraintStart_toEndOf="@+id/comments"
        app:layout_constraintTop_toTopOf="@+id/comments"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/comments_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments">

        <TextView
            android:id="@+id/comment1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/comment_one"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/comment2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/comment_two"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/comment3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/comment_three"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/comment4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/comment_four"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/comment5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/comment_five"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/comment6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/comment_six"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/comment7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/comment_seven"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/comment8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/comment_eight"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/comment9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/comment_nine"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/comment10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/comment_ten"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>